Add authorization for all user endpoints
- Some user endpoints are explicitly allowed to be accessed by everyone.
  These now return `PublicUserRead` objects to make this explicit and
  prevent accidental private info from leaking in the future.
- Some endpoints are not used. These are removed in the next commit.
- In general, users may only access endpoints using their own user ID.
